# Nemo-UndervaluedAI

./: FIXES_SUMMARY.md  SETUP_GUIDE.md  package-lock.json  package.json  port-pl-calendar.sh  pyproject.toml  tsconfig.json
docs/: ai_analysis_verification.md  ai_funds_plan.md  ai_funds_walkthrough.md  dropdown_implementation_walkthrough.md  feature_comparison.md  feature_gap_analysis.md  final_implementation_summary.md  implementation_plan.md  insider_alerts_plan.md  insights_plan.md  master_verification.md  nvda_accuracy_comparison.md  rebranding_walkthrough.md  styling_updates_walkthrough.md  task.md  vercel-walkthrough.md  verification_report.md  walkthrough.md
prisma/: schema.prisma
prisma/migrations/20251216153234_init_admin/: migration.sql
prisma/migrations/20251216172651_add_fund_snapshots/: migration.sql
prisma/migrations/20251223000349_add_stock_analysis/: migration.sql
scripts/: list-users.ts  reset-analysis-limit.ts  seed-funds.ts  test-buffett-logic.js
src/: middleware.ts
src/app/: layout.tsx  page.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/alerts/: page.tsx
src/app/brief/: page.tsx
src/app/calendar/: page.tsx
src/app/daily-review/: page.tsx
src/app/funds/: page.tsx
src/app/insights/: page.tsx
src/app/lists/: page.tsx
src/app/login/: page.tsx
src/app/weekly-review/: page.tsx
src/components/: PrivateModeToggle.tsx
src/components/alerts/: AlertCard.tsx  AlertFilters.tsx  SubscribeToggle.tsx
src/components/analysis/: HistoryGrid.tsx  (+5 more)
src/hooks/: useFundData.ts  usePrivateMode.ts  useSafeDisplay.ts
src/lib/: auth.ts
(+194 files in other folders)
